--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,29 @@
 .App {
   text-align: center;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.messageBlock {
+  border: 1px solid rgb(42, 114, 223);
+  margin-top: 2px;
+}
+
+.userBlock {
+  border: 1px solid rgb(42, 114, 223);
+  margin-top: 2px;
+  background: #a3b0ec;
+}
+
+.MessageBox {
+  width: 40%;
+  display: inline-block;
+  /* height: 900px;
+  overflow: auto; */
+}
+.UsersBlock {
+  width: 40%;
+  display: inline-block;
+  margin-left: 5%;
+  /* height: 900px; */
+  /* overflow: auto; */
 }
