--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,53 @@
+body {
+  background-color: #202020;
+}
+
 .App {
   text-align: center;
   display: flex;
 }
 
 .messageBlock {
-  border: 1px solid rgb(42, 114, 223);
+  border: 1px solid #a3b0ec;
   margin-top: 2px;
+  border-radius: 20px;
 }
 
 .userBlock {
   border: 1px solid rgb(42, 114, 223);
   margin-top: 2px;
   background: #a3b0ec;
+  border-radius: 20px;
 }
 
 .MessageBox {
+  color: #a3b0ec;
+  margin-top: 2%;
+  margin-left: 5%;
   width: 40%;
   display: inline-block;
-  height: 900px;
+  height: 810px;
   overflow: auto;
 }
+
 .UsersBlock {
-  width: 40%;
+  color: #202020;
+  width: 30%;
   display: inline-block;
   margin-left: 5%;
-  height: 900px;
+  margin-top: 2%;
+  height: 810px;
   overflow: auto;
+}
+
+.messageForm {
+  margin-top: 2%;
+  margin-left: 2%;
+}
+
+input {
+  font-size: medium;
+}
+button {
+  font-size: medium;
 }
