--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,15 @@ body {
   margin-top: 2px;
   background: #a3b0ec;
   border-radius: 20px;
+  width: 200px;
+}
+
+.adminUserBlock {
+  border: 1px solid rgb(42, 114, 223);
+  margin-top: 2px;
+  background: #a3b0ec;
+  border-radius: 20px;
+  width: 200px;
 }
 
 .MessageBox {
@@ -36,13 +45,21 @@ body {
   display: inline-block;
   margin-left: 5%;
   margin-top: 2%;
-  height: 810px;
+  height: 400px;
   overflow: auto;
+}
+
+.AllUsersBlock {
+  margin-top: 2%;
+  display: inline-block;
+  margin-left: 5%;
+  height: 400px;
+  margin-right: 1%;
 }
 
 .messageForm {
   margin-top: 2%;
-  margin-left: 2%;
+  margin-left: 1%;
 }
 
 input {
