--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ body {
   border-radius: 20px;
   color: #a3b0ec;
   margin: 2%;
-  width: 40%;
+  width: 100%;
   display: inline-block;
   height: 810px;
   overflow-y: auto;
@@ -43,7 +43,7 @@ body {
 
 .UsersBlock {
   color: #202020;
-  width: 25%;
+  width: 100%;
   display: inline-block;
   margin: 2%;
   height: 400px;
@@ -54,13 +54,17 @@ body {
   margin: 2%;
   display: inline-block;
   height: 400px;
-  width: 25%;
+  width: 100%;
   overflow-y: auto;
 }
 
 .messageForm {
   margin-top: 2%;
-  margin-left: 1%;
+  /*margin-left: 1%; */
+}
+
+.msgComponent {
+  margin: 1%;
 }
 
 input {
